# sfmt

./: Cargo.toml  README.md
src/: lib.rs  packed.rs  sfmt.rs
