[package]
name = "sfmt"
version = "0.7.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Rust implementation of SIMD-oriented Fast Mersenne Twister (SFMT)"
documentation = "https://docs.rs/sfmt/"
repository = "https://github.com/niart120/sfmt"
keywords = ["random", "rng"]
categories = ["algorithms"]
license = "MIT"

[features]
default = ["thread_rng"]

# The thread_rng feature requires the rand dependency
thread_rng = ["rand/getrandom"]

[dependencies]
rand = { version = "0.8.4", optional = true }
rand_core = "0.6.3"
getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
rand_xorshift = "0.3.0"
rand_core = { version = "0.6", features=["getrandom"] }
paste = "1.0.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.release]
no-dev-version = true
